Create example square

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div id="container">This is my Container</div>
+    <!-- <div id="container">This is my Container</div> -->
+    <div id="example-sqaure"></div>
 </body>
 </html>
