Create container and example sqaure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <!-- <div id="container">This is my Container</div> -->
-    <div id="example-sqaure"></div>
+    <div id="container">
+        <div class="sqaure"></div>
+    </div>
 </body>
 </html>
