Update CSS so multiple squares will take equal size

--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
 <body>
     <div id="container">
         <div class="sqaure"></div>
+        
+        <!-- <div class="row">
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+        </div>
+        <div class="row">
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+        </div>
+        <div class="row">
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+        </div>
+        <div class="row">
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+            <div class="sqaure"></div>
+        </div> -->
     </div>
 </body>
 </html>
