Create rows for squares

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="container">
-        <div class="sqaure"></div>
-        
+        <!-- <div class="sqaure"></div> -->
+
         <!-- <div class="row">
             <div class="sqaure"></div>
             <div class="sqaure"></div>
