Fill rows with squares

--- a/index.html
+++ b/index.html
@@ -8,33 +8,6 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div id="container">
-        <!-- <div class="sqaure"></div> -->
-
-        <!-- <div class="row">
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-        </div>
-        <div class="row">
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-        </div>
-        <div class="row">
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-        </div>
-        <div class="row">
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-            <div class="sqaure"></div>
-        </div> -->
-    </div>
+    <div id="container"></div>
 </body>
 </html>
