--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <Button>New Grid</Button>
     <div id="container"></div>
 </body>
 </html>
