--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <Button>New Grid</Button>
+    <button type="button">New Grid</button>
     <div id="container"></div>
 </body>
 </html>
